[project]
name = "alpaca-exchange-tower"
version = "0.1.0"
description = "Multi-agent order processing system for Alpaca Markets API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.20.0",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.0",
]

[project.urls]
Repository = "https://github.com/vishnusurya11/alpaca_exchange_tower"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
